samples/_failures_safe/1761549586_bb7ca4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ece404fc.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_ece404fc.c:160:16: error: missing terminating " character
  160 |         printf("%
      |                ^~
./samples/SAFE/__tmp_ece404fc.c:160:9: error: expected expression at end of input
  160 |         printf("%
      |         ^~~~~~
./samples/SAFE/__tmp_ece404fc.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ece404fc.c:160:9: error: expected declaration or statement at end of input
